--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "number-baseball",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "npm run build && npm run run",
+    "prebuild": "rm -rf dist/",
+    "build": "tsc",
+    "run": "node dist/index.js",
+    "dev": "ts-node src/index.ts",
+    "dev:watch": "tsc-watch --onSuccess \"npm run run\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,5 +21,12 @@
   "bugs": {
     "url": "https://github.com/ksyoo21remo/number-baseball/issues"
   },
-  "homepage": "https://github.com/ksyoo21remo/number-baseball#readme"
+  "homepage": "https://github.com/ksyoo21remo/number-baseball#readme",
+  "dependencies": {},
+  "devDependencies": {
+    "@types/node": "^17.0.43",
+    "ts-node": "^10.8.1",
+    "tsc-watch": "^5.0.3",
+    "typescript": "^4.7.3"
+  }
 }
