--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "run": "node dist/index.js",
     "dev": "ts-node src/index.ts",
     "dev:watch": "tsc-watch --onSuccess \"npm run run\"",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "npx eslint --fix src/**/*.ts",
-    "lint:dry": "npx eslint --fix-dry-run src/**/*.ts",
+    "test": "mocha test/**/*.spec.ts --exit",
+    "test:watch": "mocha --watch test/**/*.spec.ts --exit",
+    "lint": "npx eslint --fix src/**/*.ts test/**/*.ts",
+    "lint:dry": "npx eslint --fix-dry-run src/**/*.ts test/**/*.ts",
     "format": "npx prettier --write .",
     "format:dry": "npx prettier --check ."
   },
@@ -28,10 +29,16 @@
   "homepage": "https://github.com/ksyoo21remo/number-baseball#readme",
   "dependencies": {},
   "devDependencies": {
+    "@types/chai": "^4.3.1",
+    "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.43",
+    "@types/sinon": "^10.0.11",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
+    "chai": "^4.3.6",
     "eslint": "^8.17.0",
+    "mocha": "^10.0.0",
+    "sinon": "^14.0.0",
     "ts-node": "^10.8.1",
     "tsc-watch": "^5.0.3",
     "typescript": "^4.7.3"
