--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev:watch": "tsc-watch --onSuccess \"npm run run\"",
     "test": "mocha test/**/*.spec.ts --exit",
     "test:watch": "mocha --watch test/**/*.spec.ts --exit",
+    "test:coverage": "nyc npm run test",
     "lint": "npx eslint --fix src/**/*.ts test/**/*.ts",
     "lint:dry": "npx eslint --fix-dry-run src/**/*.ts test/**/*.ts",
     "format": "npx prettier --write .",
@@ -29,6 +30,7 @@
   "homepage": "https://github.com/ksyoo21remo/number-baseball#readme",
   "dependencies": {},
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@types/chai": "^4.3.1",
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.43",
@@ -38,7 +40,9 @@
     "chai": "^4.3.6",
     "eslint": "^8.17.0",
     "mocha": "^10.0.0",
+    "nyc": "^15.1.0",
     "sinon": "^14.0.0",
+    "source-map-support": "^0.5.21",
     "ts-node": "^10.8.1",
     "tsc-watch": "^5.0.3",
     "typescript": "^4.7.3"
