chore: moved from VSCode to WebStorm
ignore several files, directories from git, prettier, eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,10 @@
     "prettier"
   ],
   "ignorePatterns": [
+    ".nyc_output",
     ".mocharc.json",
+    ".nycrc",
+    "coverage",
     "package-lock.json",
     "package.json",
     "tsconfig.json"
