--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,8 @@
   },
   "extends": [
     "eslint:recommended",
-    "plugin:@typescript-eslint/recommended"
+    "plugin:@typescript-eslint/recommended",
+    "prettier"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -13,7 +14,8 @@
     "sourceType": "module"
   },
   "plugins": [
-    "@typescript-eslint"
+    "@typescript-eslint",
+    "prettier"
   ],
   "ignorePatterns": [
     ".mocharc.json",
@@ -22,6 +24,12 @@
     "tsconfig.json"
   ],
   "rules": {
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ],
     "max-len": [
       "warn",
       80,
@@ -75,10 +83,6 @@
     "arrow-parens": [
       "error",
       "always"
-    ],
-    "linebreak-style": [
-      "error",
-      "unix"
     ]
   }
 }
