--- a/package.json
+++ b/package.json
@@ -39,8 +39,11 @@
     "@typescript-eslint/parser": "^5.28.0",
     "chai": "^4.3.6",
     "eslint": "^8.17.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "mocha": "^10.0.0",
     "nyc": "^15.1.0",
+    "prettier": "^2.7.1",
     "sinon": "^14.0.0",
     "source-map-support": "^0.5.21",
     "ts-node": "^10.8.1",
